codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__compaction_progress_meter.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: details
---
[█████▌··············] 5632 bytes received · 17 chunks · attempt 1 · 1 block = 1 KiB
